[gd_scene load_steps=3 format=3 uid="uid://f73wnfj5taxm"]

[ext_resource type="Script" path="res://Globals/Popups.gd" id="1_gl0et"]
[ext_resource type="Texture2D" uid="uid://ksmkfoyt8r1q" path="res://Assets/UI_assets/buttonLong_beige.png" id="2_khk2d"]

[node name="Popups" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_force_pass_scroll_events = false
script = ExtResource("1_gl0et")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ItemPopup" type="PopupPanel" parent="UI"]
unique_name_in_owner = true
position = Vector2i(495, 260)
size = Vector2i(240, 200)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ItemPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 236.0
offset_bottom = 196.0

[node name="Label" type="Label" parent="UI/ItemPopup/VBoxContainer"]
layout_mode = 2
text = "name"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/ItemPopup/VBoxContainer"]
layout_mode = 2

[node name="Damage" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "damage"

[node name="DamageValue" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "7"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/ItemPopup/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "damage type"

[node name="DamageTypeValue" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "7"

[node name="VSeparator" type="VSeparator" parent="UI/ItemPopup/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/ItemPopup/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="UI/ItemPopup/VBoxContainer/HBoxContainer3"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="RemoveButton" type="Button" parent="UI/ItemPopup/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_khk2d")

[node name="Label" type="Label" parent="UI/ItemPopup/VBoxContainer/HBoxContainer3/RemoveButton"]
layout_mode = 0
offset_left = 15.0
offset_top = 13.0
offset_right = 130.0
offset_bottom = 36.0
text = "Remove Tower"

[connection signal="pressed" from="UI/ItemPopup/VBoxContainer/HBoxContainer3/RemoveButton" to="." method="_on_button_pressed"]
